tests/ui/view-types/must-be-struct.stderr
error: expected parameter name, found `{`
  --> $DIR/must-be-struct.rs:11:13
   |
LL | fn f(_: Foo.{}) {}
   |             ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-be-struct.rs:11:12
   |
LL | fn f(_: Foo.{}) {}
   |            ^
   |            |
   |            expected one of 7 possible tokens
   |            help: missing `,`

error: expected parameter name, found `{`
  --> $DIR/must-be-struct.rs:12:12
   |
LL | fn g(_: u8.{}) {}
   |            ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-be-struct.rs:12:11
   |
LL | fn g(_: u8.{}) {}
   |           ^
   |           |
   |           expected one of 7 possible tokens
   |           help: missing `,`

error: expected parameter name, found `{`
  --> $DIR/must-be-struct.rs:13:14
   |
LL | fn h(_: char.{}) {}
   |              ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-be-struct.rs:13:13
   |
LL | fn h(_: char.{}) {}
   |             ^
   |             |
   |             expected one of 7 possible tokens
   |             help: missing `,`

error: aborting due to 6 previous errors

